--- a/login principal/templates/alumnos/base.html
+++ b/login principal/templates/alumnos/base.html
@@ -103,6 +103,7 @@
             {% endif %}
 
             <div class="{{ 'flex-grow-1' if mostrar_sidebar else 'w-100' }}">
+                <!-- este block content es el ke contiene los contenidos en las otras paginas." -->
                 {% block content %}
                 {% endblock %}
             </div>
