--- a/loginP/templates/alumnos/notas.html
+++ b/loginP/templates/alumnos/notas.html
@@ -1,5 +1,5 @@
 {% extends 'alumnos/base.html' %}
-{% block title %}Materias{% endblock %}
+{% block title %}Notas{% endblock %}
 
 {% block content %}
 <div class="card" style="width: 18rem;">
