agrege notas para carta

--- a/loginP/templates/alumnos/base.html
+++ b/loginP/templates/alumnos/base.html
@@ -88,7 +88,7 @@
                         <a class="nav-link"href="/userlog" aria-disabled="true">Trabajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"href="/userlog" aria-disabled="true">Notas</a>
+                        <a class="nav-link"href="/notas" aria-disabled="true">Notas</a>
                     </li>
                     {% endif %}
                 
