--- a/loginP/templates/alumnos/base.html
+++ b/loginP/templates/alumnos/base.html
@@ -62,6 +62,7 @@
                     <div class="format bg-dark-subtle">
                         {% if session.ingresado %}
                         <p> Bienvenido, {{ session.n_usuario }}</p>
+                                        
                         {% endif %}
                     </div>
                         <h6>Administracion</h6>
@@ -79,13 +80,10 @@
                         {% endif %}
                     </div>
                     <li class="nav-item">
-                        <a class="nav-link"href="/userlog" aria-disabled="true">Perfil</a>
+                        <a class="nav-link"href="/perfil" aria-disabled="true">Perfil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"href="/materias" aria-disabled="true">Materias</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"href="/userlog" aria-disabled="true">Trabajos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"href="/notas" aria-disabled="true">Notas</a>
