--- a/loginP/templates/alumnos/index.html
+++ b/loginP/templates/alumnos/index.html
@@ -2,5 +2,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>esta es la pagina index!! estoy probando</h1>
+<div> 
+
+</div>
 {% endblock %}
