--- a/loginP/templates/alumnos/admin.html
+++ b/loginP/templates/alumnos/admin.html
@@ -2,5 +2,29 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>BIENVENIDO ADMINSTRADOR</h1>
-{% endblock%}
+
+<div class="container mb-2">
+  <h1 class="text-center">Perfil del Administrador</h1>
+  <table class="table ">
+    <tr>
+      <th>Nombre</th>
+      <th>Apellido</th>
+      <th>Foto</th>
+    </tr>
+    <tr>
+      <td>{{ session['n_usuario'] }}</td>
+      <td>{{ session['n_apellido'] }}</td>
+      <td><img src="{{ url_for('uploads', filename=session['foto']) }}" width="100" height="100" alt="Foto de usuario"></td>
+    </tr >
+  </table >
+</div>
+
+<div class="card text-bg-dark">
+    <img src="/static/imgs/work.jpg" class="card-img" alt="...">
+    <div class="card-img-overlay">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+{% endblock %}
